# cvlabel

./: README.md  pyproject.toml  setup.py
cvlabel/convert/file/: insts2labelme.py
cvlabel/convert/insts2npz/: mask.py
cvlabel/convert/labelme2coco/: rle.py  subs.py  utils.py
cvlabel/convert/labelme2insts/: bbox.py  mask.py
cvlabel/convert_batch/: labelme2yolo.py
cvlabel/convert_file/: labelme2yolo.py
cvlabel/convert_shape/: labelme2yolo.py
cvlabel/convert_split/: labelme2yolo.py
cvlabel/typedef/: coco.py  labelme.py  yolo.py
