[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cvlabel"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "cvstruct",
    "numpy",
    "pycocotools"
]

[project.optional-dependencies]
gui = ["opencv-python"]
no_gui = ["opencv-python-headless"]

[tool.setuptools]
packages = ["cvlabel"]

[tool.pyright]
extraPaths = ["./cvlabel"]

[tool.setuptools_scm]